SubBt/force-app/main/default/objects/Contract__c/fields/Accounting_Year__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Year</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>