SubBt/force-app/main/default/objects/Contract__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <description>System Generated auto number</description>
    <displayFormat>CN-{00000}</displayFormat>
    <inlineHelpText>System Generated auto number</inlineHelpText>
    <label>Contract #</label>
    <type>AutoNumber</type>
</CustomField>