SubBt/force-app/main/default/objects/Contract__c/fields/BT_Quote__c.field-meta.xml
<CustomField>
    <fullName>BT_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Quote that was used to create this Contract.</description>
    <inlineHelpText>This is the Quote that was used to create this Contract.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipName>BT_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>