SubBt/force-app/main/default/objects/Contract__c/fields/Change_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Amount__c</fullName>
    <inlineHelpText>Sum of the Customer Approved Change Orders that are tied to this Contract.</inlineHelpText>
    <label>Approved Change Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>