SubBt/force-app/main/default/objects/Contract__c/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <label>Original Contract Amount</label>
    <summarizedField>Contract_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Contract_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>