SubBt/force-app/main/default/objects/Contract__c/fields/Contract_Amount_Tax_Discount_SH__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount_Tax_Discount_SH__c</fullName>
    <formula>(Contract_Amount__c - (  Contract_Amount__c  *  Discount__c    )) +  Markup_Amount__c

/*buildertek__Contract_Amount__c +(((  buildertek__Contract_Amount__c  *  buildertek__Tax_Rate__c ) +  buildertek__Shipping_Handling__c) +  buildertek__Markup_Amount__c )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Original Contract plus Discounts and Markups.</inlineHelpText>
    <label>Total Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>