SubBt/force-app/main/default/objects/Contract__c/fields/Contract_File__c.field-meta.xml
<CustomField>
    <fullName>Contract_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract File</label>
    <referenceTo>Common_Files__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>