SubBt/force-app/main/default/objects/Contract__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <formula>Project__r.Auto_Number__c &amp;&apos;-&apos;&amp;  Auto_Number1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract #</label>
    <type>Text</type>
</CustomField>