SubBt/force-app/main/default/objects/Contract__c/fields/Contract_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rejection_Reason__c</fullName>
    <inlineHelpText>The reason the Contract was rejected.</inlineHelpText>
    <label>Contract Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>