SubBt/force-app/main/default/objects/Contract__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Projects official Start Date</description>
    <inlineHelpText>Projects official Start Date</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>