SubBt/force-app/main/default/objects/Contract__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <formula>Project__r.Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account</label>
    <type>Text</type>
</CustomField>