SubBt/force-app/main/default/objects/Contract__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <label>Email Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>