SubBt/force-app/main/default/objects/Contract__c/fields/Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Exclusions__c</fullName>
    <description>Specified items that are excluded from the prime contract</description>
    <inlineHelpText>Specified items that are excluded from the prime contract</inlineHelpText>
    <label>Exclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>