SubBt/force-app/main/default/objects/Contract__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>Date the Contract expires.</inlineHelpText>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>