SubBt/force-app/main/default/objects/Contract__c/fields/Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Inclusions__c</fullName>
    <description>Specified items that are included in the prime contract</description>
    <inlineHelpText>Specified items that are included in the prime contract</inlineHelpText>
    <label>Inclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>