SubBt/force-app/main/default/objects/Contract__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model A</fullName>
            </value>
            <value>
                <fullName>Model B</fullName>
            </value>
            <value>
                <fullName>Model C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>