SubBt/force-app/main/default/objects/Contract__c/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <label>Model Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>