SubBt/force-app/main/default/objects/Contract__c/fields/Pictures__c.field-meta.xml
<CustomField>
    <fullName>Pictures__c</fullName>
    <label>Pictures</label>
    <type>Url</type>
</CustomField>