SubBt/force-app/main/default/objects/Contract__c/fields/Retainage__c.field-meta.xml
<CustomField>
    <fullName>Retainage__c</fullName>
    <description>This is the the % amount you want to withhold from each Payable Invoice until work is completed</description>
    <inlineHelpText>This is the the % amount you want to withhold from each Payable Invoice until work is completed</inlineHelpText>
    <label>Retainage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>