SubBt/force-app/main/default/objects/Contract__c/fields/RFQ__c.field-meta.xml
<CustomField>
    <fullName>RFQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RFQ indicate that sub Contract is created from this</description>
    <label>RFQ</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sub Contract</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RFQ__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>