SubBt/force-app/main/default/objects/Contract__c/fields/Signed_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract_Date__c</fullName>
    <description>Date when the contract was signed and received</description>
    <inlineHelpText>Date when the contract was signed and received</inlineHelpText>
    <label>Signed Contract Date</label>
    <type>Date</type>
</CustomField>