SubBt/force-app/main/default/objects/Contract__c/recordTypes/Existing_Contract.recordType-meta.xml
<RecordType>
    <fullName>Existing_Contract</fullName>
    <active>true</active>
    <label>Existing Contract</label>
</RecordType>