SubBt/force-app/main/default/objects/Contract__c/recordTypes/Prime_Contract.recordType-meta.xml
<RecordType>
    <fullName>Prime_Contract</fullName>
    <active>true</active>
    <label>Prime Contract</label>
</RecordType>