SubBt/force-app/main/default/objects/Contract__c/recordTypes/Sub_Contract.recordType-meta.xml
<RecordType>
    <fullName>Sub_Contract</fullName>
    <active>true</active>
    <label>Sub Contract</label>
</RecordType>