SubBt/force-app/main/default/objects/Contract__c/listViews/All_Contract.listView-meta.xml
<ListView>
    <fullName>All_Contract</fullName>
    <columns>Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contract_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>