SubBt/force-app/main/default/objects/Contract__c/listViews/Prime_Contracts.listView-meta.xml
<ListView>
    <fullName>Prime_Contracts</fullName>
    <columns>Auto_Number__c</columns>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Signed_Contract_Date__c</columns>
    <columns>Revised_Contract_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract__c.Prime_Contract</value>
    </filters>
    <label>Prime Contracts</label>
</ListView>